fix for horizontal scroll bar (thanks gmclelland)

--- a/mockups/stacklayout-semantic_lte_ie7.css
+++ b/mockups/stacklayout-semantic_lte_ie7.css
@@ -3,54 +3,25 @@
 *
 * http://stacklayout.com/
 * http://twitter.com/stacklayout
-* http://www.decalcms.com/
+* http://decalcms.com/
 * http://workingsoftware.com.au/
 *
 * This work is licensed under Creative Commons * Attribution-ShareAlike 3.0 Australia License * http://creativecommons.org/licenses/by-sa/3.0/au/
 *
-* Please retain this credit and let us know if you use StackLayout
-* for inclusion on http://stacklayout.com/who.html
+* Please retain this credit and let us know if you use StackLayout for inclusion on http://stacklayout.com/who.html
 *
 * cam@workingsoftware.com.au
 */ 
-.stack,
-/*.stack1of2,*/
-/*.stack1of3,*/
-/*.stack2of3,*/
-/*.stack1of4,*/
-/*.stack3of4,*/
-/*.stack1of5,*/
-/*.stack2of5,*/
-/*.stack3of5,*/
-/*.stack4of5,*/
-/*.stackAuto,*/
-#nav li,
-#column1,
-#column2,
-.thisClass,
-.thatClass,
-.someClass,
-.awesomeClass,
-.anotherClass,
-#gallery,
-.galleryImage,
-.january,
-.february,
-.march,
-.april,
-.may,
-.june,
-.july,
-.august,
-.september,
-.october,
-.footerItem
+
+/*.stack,.stack1of2,.stack1of3,.stack2of3,.stack1of4,.stack3of4,.stack1of5,.stack2of5,.stack3of5,.stack4of5,.stackAuto,*/
+/* add semantic class names here: */
+#nav li, #column1, #column2, .thisClass, .thatClass, .someClass, .awesomeClass, .anotherClass, #gallery, .galleryImage, .january, .february, .march, .april, .may, .june, .july, .august, .september, .october, .footerItem
 {
     display:inline;
     zoom:1;
     word-wrap:break-word;
     margin-right:-1px;
-    _position:relative;
+    position:relative;
     _overflow:hidden;
 }
 /*.stackAuto,*/
@@ -84,5 +55,4 @@ h1#title,
 .footerItem a.stackContent
 {
     float:left;
-    position:relative;
 }
