--- a/stacklayout.css
+++ b/stacklayout.css
@@ -3,7 +3,7 @@
 *
 * http://stacklayout.com/
 * http://twitter.com/stacklayout
-* http://www.decalcms.com/
+* http://decalcms.com/
 * http://workingsoftware.com.au/
 *
 * This work is licensed under Creative Commons * Attribution-ShareAlike 3.0 Australia License * http://creativecommons.org/licenses/by-sa/3.0/au/
@@ -11,26 +11,31 @@
 * Please retain this credit and let us know if you use StackLayout for inclusion on http://stacklayout.com/who.html
 *
 * cam@workingsoftware.com.au
-*/ 
-.stack,
-.stack1of2,
-.stack1of3,
-.stack2of3,
-.stack1of4,
-.stack3of4,
-.stack1of5,
-.stack2of5,
-.stack3of5,
-.stack4of5,
-.stackAuto
+*/
+
+.stack,.stack1of2,.stack1of3,.stack2of3,.stack1of4,.stack3of4,.stack1of5,.stack2of5,.stack3of5,.stack4of5,.stackAuto,
+/* add semantic class names here: */
+.semanticClass
 {
     display:inline-block;
     font-family:'Courier New',monospace;
-    letter-spacing:-0.65em;
-    word-spacing:-0.65em;
+    letter-spacing:-0.63em;
     text-align:center;
     vertical-align:top;
 }
+/* Opera Windows fix */
+@media all and (-webkit-min-device-pixel-ratio:10000), not all and (-webkit-min-device-pixel-ratio:0) {
+head~body .stack,head~body .stack1of2,head~body .stack1of3,head~body .stack2of3,head~body .stack1of4,head~body .stack3of4,head~body .stack1of5,head~body .stack2of5,head~body .stack3of5,head~body .stack4of5,head~body .stackAuto,
+/* add semantic class names here: */
+.semanticClass
+{
+    word-spacing:-0.63em;
+}
+.stack
+{
+    position:relative;
+}}
+
 .stackContent
 {
     display:block;
@@ -40,7 +45,7 @@
 }
 .stackContent:after
 {
-    content:".";
+    content:"";
     display:block;
     height:0;
     clear:both;
@@ -57,6 +62,11 @@
 .stack
 {
     width:100%;
+    overflow:hidden;
+}
+.stack .stack
+{
+    overflow:visible;
 }
 .stack1of2
 {
