--- a/stacklayout_lte_ie7.css
+++ b/stacklayout_lte_ie7.css
@@ -3,7 +3,7 @@
 *
 * http://stacklayout.com/
 * http://twitter.com/stacklayout
-* http://www.decalcms.com/
+* http://decalcms.com/
 * http://workingsoftware.com.au/
 *
 * This work is licensed under Creative Commons * Attribution-ShareAlike 3.0 Australia License * http://creativecommons.org/licenses/by-sa/3.0/au/
@@ -12,41 +12,34 @@
 *
 * cam@workingsoftware.com.au
 */ 
-.stack,
-.stack1of2,
-.stack1of3,
-.stack2of3,
-.stack1of4,
-.stack3of4,
-.stack1of5,
-.stack2of5,
-.stack3of5,
-.stack4of5,
-.stackAuto
+
+.stack,.stack1of2,.stack1of3,.stack2of3,.stack1of4,.stack3of4,.stack1of5,.stack2of5,.stack3of5,.stack4of5,.stackAuto,
+/* add semantic class names here: */
+.semanticClass
 {
     display:inline;
     zoom:1;
     word-wrap:break-word;
     margin-right:-1px;
-    _position:relative;
+    position:relative;
     _overflow:hidden;
-}
+}   
 .stackAuto
 {
     margin-right:0;
-}
+}   
 a,
 .stackContent
-{
+{   
     zoom:1;
     position:relative;
 }
 .stackAuto .stackContent
-{
+{   
     display:inline;
     position:static;
-}
+}   
 .stackAuto a.stackContent
 {
     float:left;
-}
+} 
